# urr_ros_navigation

./: README.md
urr_bot_description/: CMakeLists.txt  package.xml
urr_bot_description/fusionfile/: urr_bot v8.f3d
urr_bot_description/launch/: gazebo.launch  rviz.launch
urr_bot_description/meshes/: base_link.stl  camera_1.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
urr_bot_description/urdf/: materials.xacro  urr_bot.gazebo  urr_bot.trans  urr_bot.xacro
urr_bot_description/worlds/: house.world
urr_bot_mapping/: CMakeLists.txt  package.xml
urr_bot_mapping/config/: gmapping_params.yaml
urr_bot_mapping/launch/: gmapping.launch
urr_bot_mapping/maps/: house.pgm  house.yaml
urr_bot_mapping/rviz/: mapping.rviz
urr_bot_navigation/: CMakeLists.txt  package.xml
urr_bot_navigation/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
urr_bot_navigation/launch/: amcl.launch  map_server.launch  move_base.launch  navigation.launch
urr_bot_navigation/rviz/: navigation.rviz
urr_bot_simulation/: CMakeLists.txt  package.xml
urr_bot_simulation/launch/: gazebo.launch  rviz.launch
urr_bot_simulation/models/house/: model.config  model.sdf
urr_bot_simulation/rviz/: config.rviz
urr_bot_simulation/worlds/: house.world
